Fix DateTimePicker z-index

--- a/api/resources/assets/css/admin/app.css
+++ b/api/resources/assets/css/admin/app.css
@@ -57,3 +57,7 @@
     width: 240px;
     display:inline;
 }
+
+.xdsoft_datetimepicker {
+    z-index: 10 !important;
+}
